新增知识图谱功能以及静态前端
